--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Connect Four App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start-dev": "nodemon server/index.js",
+    "dev": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.1",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "npm": "^6.1.0",
